<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffeeeeee"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tl_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/box"
                android:orientation="vertical"
                android:padding="15dp"
                android:shrinkColumns="0"
                android:stretchColumns="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/on_off"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <Switch
                        android:id="@+id/sc_on_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:thumb="@drawable/switch_custom_thumb_selector"
                        android:track="@drawable/switch_custom_track_selector"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/only_effect_screen_off"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <Switch
                        android:id="@+id/sc_only_effect_screen_off"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:thumb="@drawable/switch_custom_thumb_selector"
                        android:track="@drawable/switch_custom_track_selector"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_long_press_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/long_press_time"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <SeekBar
                        android:id="@+id/sb_long_press_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="2000"
                        android:min="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:progressDrawable="@drawable/seek_bar_bg"
                        android:splitTrack="false"
                        android:thumb="@drawable/seek_bar_thumb"
                        android:thumbOffset="0dp" />
                </TableRow>

                <TableRow
                    android:layout_marginTop="10dp"
                    android:gravity="center_vertical">

                    <TextView
                        android:id="@+id/tv_vibrate_strength"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vibrate_strength"
                        android:textColor="@color/textColor"
                        android:textSize="15sp" />

                    <SeekBar
                        android:id="@+id/sb_vibrate_strength"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="2000"
                        android:min="0"
                        android:paddingStart="0dp"
                        android:paddingEnd="0dp"
                        android:progressDrawable="@drawable/seek_bar_bg"
                        android:splitTrack="false"
                        android:thumb="@drawable/seek_bar_thumb"
                        android:thumbOffset="0dp" />
                </TableRow>
            </TableLayout>

            <LinearLayout
                android:id="@+id/ll_explain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/box"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tl_setting">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingMultiplier="1.5"
                    android:text="@string/authorizationQuestion" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/box"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_explain">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:adjustViewBounds="true"
                    android:src="@drawable/support_me" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>